tests/NormalTests/paczka1/fuzzy1/37955037.err
Error in line 2: HXYG0BmYPZ S700 10,7
Error in line 17: r33kTr4s8cf S826 61,14
Error in line 14: HXYG0BmYPZ A603 44,9
Error in line 26: r33kTr4s8cf A846 78,93
Error in line 18: r33kTr4s8cf S826 32,5
Error in line 24: S700 A846 35,7
Error in line 1: BFXJqy A846 94,8
